Downgrade quarkus version and sdk-operator